# rtxi

./: .buildvars  .clang-format  .clang-tidy  .codespellrc  .gitignore  Add-a-Button.md  BUILDING.md  CHANGELOG  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODE_OF_CONDUCT.md  ChangeLog  Config.cmake.in  Doxyfile  HACKING.md  Home-Page.md  Home.md  INSTALL  Installation.md  Makefile.am  Makefile.buildvars  README  README.md  TODO  acinclude.m4  autogen.sh  conanfile.py  configure.ac  configure.in  dsp_headers.txt  gen_mono.cpp  gen_whitenoise.cpp  gen_zap.h  librtxi.pc.in  plotdialog.h  powfast.hpp  rtxiConfig.h.in  rtxi_uml.uxf  setup.sh
comedi/: AUTHORS  ChangeLog  ChangeLog-0.7  INSTALL  Makefile.am  README  README.CVS  TODO  configure.ac
comedi/comedi/: Kbuild  comedi_compat32.c  comedi_fops.c  comedi_fops.h  comedi_ksyms.c  drivers.c  proc.c  range.c  rt_pend_tq.c
comedi/include/: Makefile.am
comedi/m4/: as-linux.m4  as-modtool.m4  rtai.m4  rtlinux.m4
comedi/patches/: cascade-test.c  patch-scxi  patch-scxi-0.7.63
comedi/rpm/: comedi.patch  comedi.spec
comedi/scripts/: call_trace  check_cmdtest  check_driver  comedi_indent  doc_devlist  dump_doc
comedi_calibrate/: AUTHORS  ChangeLog  Makefile.am  README  configure.ac
comedi_calibrate/comedi_calibrate/: README  calib.h  cb.c  cb64.c  comedi_calibrate.c  ni.c  ni_labpc.c  other.c  split_dumps
comedi_calibrate/comedi_soft_calibrate/: Makefile.am  calibration_set.cpp  calibrator.hpp  calibrator_misc.cpp  comedi_soft_calibrate.cpp
comedi_calibrate/libcomedi_calibrate/: Makefile.am  save_cal.c
comedilib/demo/: Makefile.am  README  antialias.c  ao_mmap.c  ao_waveform.c  apply_cal.c  choose_filter.c  dio.c  do_waveform.c  gpct_encoder.c  gpct_pulse_generator.c  gpct_simple_counting.c  inp.c  inpn.c  insn.c  ledclock.c  mmap.c  poll.c  sigio.c  sv.c  tut1.c
comedilib/lib/: Makefile.am  buffer.c  calib.c  calib_yacc.y  cmd.c  comedi.c  data.c  dio.c  error.c  filler.c  insn_config_wrappers.c  ioctl.c  libinternal.h  range.c  timed.c  version_script
libs/: .gitignore  CMakeLists.txt  Makefile.am
libs/dsp/: CMakeLists.txt  Makefile  Makefile.am  README.md  abstmath.cpp  abstmath.h  abstmath.hpp  acosh.cpp  acosh.hpp  adap_fir.cpp  adap_fir.h  adaptype.h  adaptype.hpp  anlg_rcn.cpp  anlg_rcn.h  anlg_rcn.hpp  anlgfilt.cpp  anlgfilt.h  ar_est.hpp  ar_proc.cpp  ar_proc.hpp  ar_src.cpp  ar_src.h  ar_src.hpp  arma_est.hpp  arma_src.h  armaproc.cpp  armaproc.hpp  armaspec.cpp  armaspec.h  arsigsrc.cpp  arsigsrc.h  arspec.hpp  autometh.cpp  autometh.hpp  bartlett_periodogram.cpp  bartlett_periodogram.hpp  bartpdgm.cpp  bartpdgm.h  bessel.cpp  (+171 more)
libs/math/: CMakeLists.txt  Makefile  Makefile.am  powfast.cpp  powfast.hpp  rtmath.cpp  rtmath.h  runningstat.cpp  runningstat.h
libs/plot/: CMakeLists.txt  Makefile  Makefile.am  basicplot.cpp  basicplot.h  incrementalplot.cpp  incrementalplot.h  plotdialog.cpp  scatterplot.cpp  scrollbar.cpp  scrollbar.h
libs/siggen/: gen_saw.h
plugins/: CMakeLists.txt  Makefile.am
plugins/FIRwindow/: FIRwindow.cpp  FIRwindow.h  Makefile.am
plugins/IIRfilter/: IIRfilter.cpp  IIRfilter.h  Makefile.am
plugins/analogy_device/: Makefile.am  analogy_device.cpp  analogy_device.h  analogy_driver.cpp  analogy_driver.h
plugins/clamp_protocol/: CP_plot_window.cpp  CP_plot_window.h  CP_protocol.cpp  CP_protocol.h  CP_protocol_editor.cpp  CP_protocol_editor.h  Makefile.am  clamp_protocol.cpp  (+1 more)
rtxi/: Makefile.am
scripts/: Makefile.am  Trolltech.conf  analyzeHistdata.r  blacklist-comedi.conf  coverage_report.sh  create_template_plugin.sh  download_all_plugins.sh  install_dependencies.sh  install_dynamo.sh  install_rt_aufs_kernel.sh  install_rt_kernel.sh  install_rt_kernel_evl.sh  install_rt_kernel_xenomai.sh  install_rtxi.sh  install_teamviewer.sh  kernel_config  kernel_test.sh  rtxi.desktop  rtxi_comedi.in  rtxi_load_analogy  rtxi_load_analogy.service  rtxi_plugin_config.in  strerrno.sh  test_rt_kernel.sh  uninstall_rtxi.sh  update_rtxi.sh
src/: CMakeLists.txt  Makefile.am  analogy_driver.cpp  atomic_fifo.cpp  atomic_fifo.h  atomic_fifo.hpp  cmdline.cpp  compiler.h  console.cpp  ctmap.hpp  daq.cpp  daq.h  daq.hpp  debug.cpp  debug.h  debug.hpp  default_gui_model.cpp  default_gui_model.h  dlplugin.cpp  dlplugin.hpp  event.cpp  event.h  event.hpp  fifo.cpp  fifo.h  fifo.hpp  fifo_evl.cpp  fifo_posix.cpp  fifo_preempt_rt.cpp  fifo_xenomai.cpp  gsc_aio168_driver.cpp  io.cpp  io.h  io.hpp  logger.cpp  logger.hpp  main.cpp  main_window.cpp  main_window.h  main_window.hpp  (+33 more)
test/: CMakeLists.txt  atomic_fifo_tests.cpp  core_plugins_tests.cpp  core_plugins_tests.h  daq_tests.cpp  daq_tests.h  dsp_tests.cpp  dsp_tests.hpp  event_tests.cpp  event_tests.h  event_tests.hpp  fakeDriver.cpp  fakePlugin.cpp  fakePlugin.h  fifo_tests.cpp  fifo_tests.hpp  io_tests.cpp  io_tests.hpp  module_tests.cpp  module_tests.hpp  plugin_tests.cpp  plugin_tests.h  plugin_tests.hpp  rt_os_tests.cpp  rt_os_tests.hpp  rtxiTests.cpp  rtxiTests.h  settings_tests.cpp  settings_tests.h  system_tests.cpp  system_tests.h  system_tests.hpp  workspace_tests.cpp  workspace_tests.h
tests/: Makefile.am  atomic_fifo_tests.cpp  atomic_fifo_tests.h  connector_plugin_tests.cpp  connector_plugin_tests.h  core_plugins_tests.cpp  core_plugins_tests.h  daq_tests.cpp  daq_tests.h  event_tests.cpp  eventmanager_tests.cpp  eventmanager_tests.h  fakePlugin.cpp  fakePlugin.h  fifo_tests.cpp  fifo_tests.h  io_tests.cpp  io_tests.h  performance_measurement_plugin_tests.cpp  performance_measurement_plugin_tests.h  plugin_tests.cpp  plugin_tests.h  rtxiTests.cpp  rtxiTests.h  rtxi_tests.cpp  rtxi_tests.h  settings_tests.cpp  settings_tests.h  system_tests.cpp  system_tests.h  workspace_tests.cpp  workspace_tests.h
testsuite/: Makefile.am  main.cpp  test_event.cpp  test_event.h  test_fifo.cpp  test_fifo.h  test_no_copy_fifo.cpp  test_no_copy_fifo.h  test_plugin.cpp  test_plugin_module.cpp  test_plugin_module.h  test_rt.cpp  test_rt.h  test_rt_os.cpp  test_rt_os.h  test_rtfile.cpp  test_rtfile.h  test_settings.cpp  test_settings.h
(+1330 files in other folders)
